i18n/es/docusaurus-plugin-content-docs-ap/version-3.1/admin-guide/getting-started.mdx
---
title: Comenzar
sidebar_position: 30
---

## Instalación

import { CodeExample } from "@site/src/components/CodeExample";

La forma más fácil de instalar la Anchor Platform es descargar la [imagen de docker][anchor-platform-image].

<CodeExample>

```bash
docker pull stellar/anchor-platform:latest
```

</CodeExample>

## Configurar el Entorno de Desarrollo

En esta guía utilizaremos [docker compose][docker-compose] por simplicidad, pero puedes ejecutar la Anchor Platform utilizando otras herramientas que admiten docker, como [minikube] o un clúster completo de [kubernetes].

Vamos a crear un archivo de composición mínimo para comenzar.

<CodeExample>

```yaml
# docker-compose.yml
services:
  sep-server:
    image: stellar/anchor-platform:latest
    command: --sep-server
    ports:
      - "8080:8080"
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
  platform-server:
    image: stellar/anchor-platform:latest
    command: --platform-server
    ports:
      - "8085:8085"
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
```

</CodeExample>

La opción `--sep-server` indica a la Anchor Platform que haga disponibles los puntos finales de API definidos por los SEPs que has habilitado a través de la configuración en el puerto 8080.

La opción `--platform-sever` hace que la API de la Plataforma esté disponible, que es la API de backend que tu(s) servicio(s) usarán para comunicarse con la Anchor Platform. Estará disponible en el puerto 8085

## Configuración

La Anchor Platform admite dos enfoques para la configuración:

- usar variables de entorno
- usar un archivo de configuración YAML

Se puede usar uno o una combinación de ambos enfoques. Las variables anidadas en el archivo YAML se expresan utilizando guiones bajos o puntos (`_`, `.`) al usar variables de entorno. Aquí demostraremos ambos enfoques, pero usaremos exclusivamente variables de entorno en las secciones siguientes. Consulta el conjunto completo de opciones de configuración en el [archivo de valores predeterminados][ap-default-values] de la Anchor Platform.

:::info

La Anchor Platform no permite secretos de aplicación en el archivo de configuración YAML. En su lugar, los secretos de aplicación, que todos tienen el prefijo `SECRET_`, deben especificarse en el entorno.

:::

Vamos a crear el archivo de entorno especificado en nuestro archivo de docker compose.

<CodeExample>

```bash
touch dev.env
```

</CodeExample>

Y si estás usando un archivo de configuración YAML, vamos a crear eso también.

<CodeExample>

```bash
mkdir config
touch config/dev.services.yaml
```

</CodeExample>

Necesitarás informar a la Anchor Platform dónde puede encontrar tu archivo de configuración. Así que vamos a agregar una variable de entorno para eso.

<CodeExample>

```bash
# dev.env
STELLAR_ANCHOR_CONFIG=/home/dev.services.yaml
```

</CodeExample>

Especifica la versión del esquema de configuración en tu archivo YAML.

<CodeExample>

```yaml
# dev.services.yaml
version: 1
```

</CodeExample>

### Cambio del Puerto del Servidor de la Plataforma

Por ejemplo, cambiemos el puerto del servidor de la plataforma.

Usando variables de entorno, esto es simplemente:

<CodeExample>

```bash
# dev.env
PLATFORM_SERVER_PORT=8085
```

</CodeExample>

O si usas la configuración YAML:

<CodeExample>

```yaml
# dev.services.yaml
platform_server:
  port: 8085
```

</CodeExample>

### Especifica los Activos de Tu Servicio

Vamos a agregar los activos que tu implementación de la Anchor Platform utilizará. Esta configuración se especifica en un archivo YAML. Si solo estás utilizando la Anchor Platform para alojar un archivo SEP-1 stellar.toml o para ejecutar la Autenticación SEP-10 Stellar, puedes omitir este paso.

<CodeExample>

```bash
touch config/dev.assets.yaml
```

</CodeExample>

En esta guía construiremos servicios de anclaje para USDC de Circle en la red de prueba de Stellar. Actualiza los valores anteriores según los activos que emitirás. Asegúrate de especificar el `emisor` de testnet en tu archivo de desarrollo, y crea tu propia `cuenta_de_distribución` utilizando una herramienta como [Stellar Lab][stellar-lab]. La `cuenta_de_distribución` será utilizada por tus clientes como la cuenta de destino para los pagos a tu servicio.

<CodeExample>

```yaml
# dev.assets.yaml
items:
  - id: stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 2
```

</CodeExample>

Este archivo necesita ser referenciado en nuestra configuración para que la Anchor Platform pueda encontrarlo.

Usando variables de entorno:

<CodeExample>

```bash
# dev.env
ASSETS_TYPE=file
ASSETS_VALUE=/home/dev.assets.yaml
```

</CodeExample>

Usando un archivo YAML:

<CodeExample>

```yaml
# dev.services.yaml
assets:
  type: file
  value: /home/dev.assets.yaml
```

</CodeExample>

### Agregar Persistencia de Datos

La Anchor Platform admite [PostgreSQL][postgresql] y [Aurora PostgreSQL][aurora-postgresql] para uso en producción, pero también admite [H2][h2] o [SQLite][sqlite] para uso en desarrollo. Para gestionar migraciones, la Anchor Platform utiliza [Flyway][flyway]. La versión más reciente de PostgreSQL admitida por Flyway es PostgreSQL 14.

Antes de continuar, vamos a agregar una base de datos a nuestro entorno de desarrollo para que las transacciones que iniciemos persistan después de detener el servicio.

Una base de datos solo es necesaria si se está utilizando la Anchor Platform para facilitar transacciones.

<CodeExample>

```yaml
# docker-compose.yml
version: "3.8"
services:
  sep-server:
    image: stellar/anchor-platform:latest
    command: --sep-server
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
    ports:
      - "8080:8080"
    depends_on:
      - db
  platform-server:
    image: stellar/anchor-platform:latest
    command: --platform-server
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
    ports:
      - "8085:8085"
    depends_on:
      - db
  db:
    image: postgres:14
    ports:
      - "5432:5432"
    env_file:
      - ./dev.env
    volumes:
      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
```

</CodeExample>

Ahora vamos a actualizar nuestro entorno para que el servidor de la plataforma pueda conectarse al servidor de la base de datos.

<CodeExample>

```bash
# dev.env
DATA_TYPE=postgres
DATA_SERVER=db
DATA_DATABASE=platform
DATA_FLYWAY_ENABLED=true

SECRET_DATA_USERNAME=postgres
SECRET_DATA_PASSWORD=password

POSTGRES_USER=postgres
POSTGRES_PASSWORD=password
```

</CodeExample>

Si estás utilizando la configuración YAML en su lugar, las variables de entorno `POSTGRES_` siempre deben estar en el entorno, ya que son para tu servidor de base de datos, no para la Anchor Platform. Los secretos también deben especificarse en el entorno.

<CodeExample>

```yaml
# dev.services.yaml
data:
  type: postgres
  server: db
  database: platform
  flyway_enabled: true
```

</CodeExample>

Debemos crear la base de datos `platform` antes de que el servidor de la plataforma pueda conectarse a ella, así que hagamos un script para crear nuestra base de datos.

<CodeExample>

```bash
touch init.sql
```

</CodeExample>

<CodeExample>

```sql
-- init.sql
CREATE DATABASE platform;
```

</CodeExample>

Intenta ejecutar el servidor de la plataforma además de la base de datos.

<CodeExample>

```bash
docker compose up
```

</CodeExample>

Deberías ver los registros reportando una conexión exitosa a la base de datos postgres.

### Configurar la Autenticación de la API de la Plataforma

Para facilitar pagos transnacionales o transacciones de depósito y retirada, tu negocio necesitará obtener y actualizar registros de transacciones desde la API interna de la Anchor Platform. Actualmente, la opción `--sep-server` hace disponibles las API SEP públicas, mientras que la API interna de la Plataforma está disponible en el servidor de la Plataforma, iniciado por la opción `--platform-server`. El negocio debe hacer que el Servidor de la Plataforma sea accesible solo en la red interna, sin embargo, es posible agregar autenticación para acceder a la API interna de la Plataforma.

Agrega las siguientes variables de entorno.

<CodeExample>

```bash
# dev.env
PLATFORM_API_BASE_URL=http://platform-server:8085
PLATFORM_API_AUTH_TYPE=jwt
SECRET_PLATFORM_API_AUTH_SECRET=[your jwt encryption key]
```

</CodeExample>

Al realizar solicitudes a la API de la Plataforma, agrega un JWT firmado por el secreto definido en tu entorno al encabezado `Authorization` como un token portador.

`PLATFORM_API_BASE_URL` utiliza `platform` en lugar de `localhost` como el host porque estarás realizando solicitudes a la API de la Plataforma dentro de la red local creada por docker compose. Al configurar tu servicio en un entorno de pruebas o producción, asegúrate de actualizar las URL de tu servicio.

### Pasando Flags de JVM

La Anchor Platform utiliza JVM para ejecutarse. A veces, se desea cambiar los flags de JVM para ejecutar el servicio. Para hacerlo, establece la variable de entorno `JVM_FLAGS` en el valor apropiado

```bash
# dev.env
JVM_FLAGS="-Xms256m -Xmx2048m"
```

:::tip

Si necesitas pasar una variable de entorno de tu máquina al contenedor, debes usar la opción `environment` de docker compose para establecer las variables en su lugar. Aquí hay un ejemplo de usar el keystore de tu máquina local en el contenedor:

```yaml
# docker-compose.yml
version: "3.8"
services:
  sep-server:
    image: stellar/anchor-platform:latest
    command: --sep-server
    env_file:
      - ./dev.env
    environment:
      JVM_FLAGS: -Djavax.net.ssl.trustStore=/keystore.jks -Djavax.net.ssl.trustStorePassword=${KEYSTORE_PASSWORD}
    volumes:
      - ${KEYSTORE_LOCATION}:/keystore.jks
# ...
```

Donde `KEYSTORE_LOCATION` es la ubicación local del keystore y `KEYSTORE_PASSWORD` es la contraseña local del keystore.

:::

### Sentry

La Anchor Platform admite [Sentry](https://sentry.io/) para el seguimiento de errores. Para habilitar Sentry, agrega las siguientes variables de entorno.

<CodeExample>

```bash
# dev.env
SENTRY_DSN=[your sentry dsn]
SENTRY_RELEASE=[your release version]
SENTRY_ENVIRONMENT=[your environment]
SENTRY_DEBUG=[true|false]
SENTRY_AUTH_TOKEN=[your sentry auth token]
```

</CodeExample>

[sep-1]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0001.md
[sep-9]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0009.md
[sep-24]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md
[sep-38]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0038.md
[sep24-get-info]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md#info
[anchor-platform-image]: https://hub.docker.com/r/stellar/anchor-platform
[docker-compose]: https://docs.docker.com/compose/
[minikube]: https://minikube.sigs.k8s.io/docs/
[kubernetes]: https://kubernetes.io/
[nginx]: https://www.nginx.com/
[ap-default-values]: https://github.com/stellar/java-stellar-anchor-sdk/blob/develop/platform/src/main/resources/config/anchor-config-default-values.yaml
[stellar-demo-wallet]: https://demo-wallet.stellar.org
[stellar-lab]: https://lab.stellar.org/
[postgresql]: https://www.postgresql.org/
[aurora-postgresql]: https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Aurora.AuroraPostgreSQL.html
[h2]: https://www.h2database.com/html/main.html
[sqlite]: https://www.sqlite.org/index.html
[flyway]: https://documentation.red-gate.com/fd/welcome-to-flyway-184127914.html
[sep-24-ref-ui]: https://github.com/stellar/sep24-reference-ui
[sep-24-ref]: https://github.com/stellar/java-stellar-anchor-sdk/tree/develop/kotlin-reference-server
